syntax = "proto3";

package finternet;

service Driver {
  // LoadDriver
  rpc LoadDriver(LoadDriverRequest) returns (LoadDriverResponse);

  // UnloadDriver
  rpc UnloadDriver(UnloadDriverRequest) returns (UnloadDriverResponse);
}

message LoadDriverRequest {
  string driver_name = 1;
  string driver_version = 2;
  BinaryType driver_type = 3;
  bytes driver_binary = 4;
}

enum BinaryType {
  WAT = 0;
  WASM = 1;
}

message LoadDriverResponse {
  string driver_name = 2;
  string driver_version = 3;
}

message UnloadDriverRequest {
   string driver_name = 1; 
   string driver_version = 2;
   }

message UnloadDriverResponse { 
  string driver_name = 1;
  string driver_version=2;
  }

service Bind {
  // Bind
  rpc Bind(BindRequest) returns (BindResponse);

  // Unbind
  rpc Unbind(UnbindRequest) returns (UnbindResponse);
}

message BindRequest {
  string driver_name = 1;
  string driver_version = 2;
  string path = 3;
  string account_info = 4;
}

message BindResponse {
  string driver_name = 1;
  string driver_version = 2;
  string path = 3;
  string account_info = 4;
}

message UnbindRequest { string path = 1; }

message UnbindResponse {
  string driver_name = 1;
  string driver_version = 3;
  string account_info = 4;
}

service Execution {
  // Execute
  rpc Execute(ExecutionRequest) returns (ExecutionResponse);
}

message ExecutionRequest {
  string name = 1;
  string version = 2;
  string input = 3;
  BinaryType type = 4;
  bytes binary = 5;
}
message ExecutionResponse { string output = 1; }

service DriverDetails{
  rpc SendDetails(DriverDetailsRequest) returns (DriverDetailsResponse);
}

message DriverDetailsRequest{
}

message DriverDetail {
    string name = 1;
    string version = 2;
}

message DriverDetailsResponse{
    string message = 1;
    repeated DriverDetail driver_data = 2;
}
